--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+/src/views/bak
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
